force-app/main/default/objects/JobSeeker__c/JobSeeker__c.object-meta.xml
<CustomObject>
    <labels>JobSeeker</labels>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <labels>Number</labels>
        <type>AutoNumber</type>
    </nameField>
    <plurallabels>JobSeekers</plurallabels>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>