force-app/main/default/objects/JobSeeker__c/fields/Background__c.field-meta.xml
<CustomField>
    <fullName>Background__c</fullName>
    <labels>Background</labels>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>