force-app/main/default/objects/JobSeeker__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <labels>Email</labels>
    <required>true</required>
    <type>Email</type>
</CustomField>