force-app/main/default/objects/JobSeeker__c/fields/FirstName__c.field-meta.xml
<CustomField>
    <fullName>FirstName__c</fullName>
    <labels>FirstName</labels>
    <length>255</length>
    <type>Text</type>
</CustomField>