force-app/main/default/objects/JobSeeker__c/fields/LastName__c.field-meta.xml
<CustomField>
    <fullName>LastName__c</fullName>
    <labels>LastName</labels>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>