force-app/main/default/objects/JobSeeker__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <labels>Phone</labels>
    <type>Phone</type>
</CustomField>