force-app/main/default/objects/JobSeeker__c/fields/Specialization__c.field-meta.xml
<CustomField>
    <fullName>Specialization__c</fullName>
    <labels>Specialization</labels>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>