force-app/main/default/objects/JobSeeker__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <filterScope>Everything</filterScope>
    <labels>All</labels>
</ListView>